<resources>
    <string name="app_name">YoVendoRECARGA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="title_activity_menu_pin">PIN de seguridad</string>
    <string name="title_activity_notificaciones">Notificaciones</string>
    <string name="title_activity_deposito_bancario">Depósito Bancario</string>
    <string name="title_activity_sales_history">Historial</string>
    <string name="label_vendor_code">Código de Vendedor: %1$d</string>
    <string name="title_activity_referido">Invitar</string>
    <string name="text_send">Enviar</string>
    <string-array name="drawer_options">
        <item>Inicio</item>
        <item>Perfil de la Cuenta</item>
        <item>Historial de Ventas</item>
        <item>Solicitar Saldo YVR.com</item>
        <item>Alertas y Noficaciones</item>
        <item>Información General</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="deposit_dending_deposit">Enviando validación...</string>
    <string name="refer_sending_invitation">Enviando invitación...</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_current_pass">Contraseña Actual:</string>
    <string name="hint_new_pass">Nueva Contraseña:</string>
    <string name="hint_repeat_pass">Repetir Nueva Contraseña:</string>
    <string name="remember_email_check">Recordar correo electrónico</string>
    <string name="btn_login_text">INICIAR SESIÓN</string>
    <string name="dialog_password_update_error_title">¡LO SENTIMOS!</string>
    <string name="we_are_sorry_msg_title">LO SENTIMOS</string>
    <string name="dialog_error_topup_content">Vuelve a iniciar sesión e inténtalo de nuevo</string>
    <string name="try_again_message">Inténtelo nuevamente</string>
    <string name="something_went_wrong">Algo ha salido mal</string>
    <string name="something_went_wrong_try_again">Algo ha salido mal, inténtelo nuevamente</string>
    <string name="check_history_title">REVISA EL HISTORIAL</string>
    <string name="check_history_advice_ln1">Algo ha salido mal. Revisa el historial de recargas</string>
    <string name="check_history_advice_ln2">y verifica si se efectuó la recarga.</string>
    <string name="deposit_error">ALGO HA SALIDO MAL...</string>
    <string name="insufficent_balance_title">INSUFICIENTE SALDO PARA VENDER</string>
    <string name="insufficent_balance_ln1">No tienes suficiente saldo para realizar la recarga.</string>
    <string name="insufficent_balance_ln2">Haz un depósito bancario para añadir saldo a tu cuenta.</string>
    <string name="invitation_error">ALGO HA SALIDO MAL...</string>
    <string name="error_invalid_credentials_title">CREDENCIALES INCORRECTAS</string>
    <string name="error_invalid_credentials_content">El correo o la contraseña son incorrectos, inténtalo de nuevo.</string>
    <string name="deposit_error_line1">Tu depósito no pudo ser procesado. Inténtalo más tarde.</string>
    <string name="deposit_success_line1">Información enviada con éxito, muy pronto recibirás un correo con el estado de tu depósito.</string>
    <string name="internet_connecttion_title">ERROR DE CONEXIÓN</string>
    <string name="internet_connecttion_msg">Algo ha salido mal, revisa tu conexión a internet.</string>
    <string name="invitation_sent_line1">La invitación se envió con éxito. Recibirás tu saldo gratis cuando acepten tu invitación a YoVendoRECARGA.</string>
    <string name="invitation_error_line1">Tu invitación no se pudo enviar. Inténtalo más tarde.</string>
    <string name="invitation_email_already_invited_title">YA HA SIDO INVITADO</string>
    <string name="invitation_email_already_invited_message">La invitación ya ha sido enviada a esta dirección de correo. Intenta con una diferente.</string>
    <string name="succeed_title">¡ÉXITO!</string>
    <string name="password_changed_success">La contraseña ha sido cambiada exitosamente.</string>
    <string name="request_balance_success">¡HAS SOLICITADO SALDO EXITOSAMENTE!</string>
    <string name="request_balance_success_message">Haz solicitado saldo al Master exitosamente.</string>
    <string name="request_balance_success_message_master_name">Haz solicitado saldo exitosamente a</string>
    <string name="deposit_success">¡INFORMACIÓN ENVIADA!</string>
    <string name="invitation_success">¡INVITACIÓN ENVIADA!</string>
    <string name="expired_session">SESIÓN EXPIRADA</string>
    <string name="dialog_succeed_topoup_title">¡RECARGA EXITOSA!</string>
    <string name="dialog_succeed_topup_content">Recarga se ha enviado al número: </string>
    <string name="validation_required">Requerido</string>
    <string name="validation_not_valid_email">Email no válido</string>
    <string name="validation_not_valid_phone">Teléfono no válido</string>
    <string name="validation_not_valid_amount">No es un monto válido</string>
    <string name="validation_not_valid_voucher">Comprobante no válido</string>
    <string name="validation_no_valid_name">Debe escribir un nombre válido</string>
    <string name="validation_no_valid_username">Nombre de usuario no válido</string>
    <string name="validation_required_operator">Debe seleccionar un operador</string>
    <string name="validation_required_date">Debe seleccionar una fecha</string>
    <string name="toast_valid_phone">Debe escribir un número válido</string>
    <string name="diff_password_required">Nueva contraseña debe ser diferente</string>
    <string name="password_not_match">Las contraseñas no coinciden</string>
    <string name="pin_not_match">Los pines de seguridad no coinciden</string>
    <string name="deposit_date_invalid">La fecha de depósito no debe ser mayor a la fecha actual</string>
    <string name="no_internet_connection">No está conectado a internet.</string>
    <string name="validation_not_valid_minimum">El comprobante debe tener %1$d dígitos como mínimo</string>
    <string name="terms_and_conditions"><u>Términos y Condiciones</u>.</string>
    <string name="terms_and_conditions_title">TÉRMINOS Y CONDICIONES</string>
    <string name="privacy_and_cookies_title">POLÍTICAS DE PRIVACIDAD Y COOKIES</string>
    <string name="terms_and_conditions_first_subtitle">Generalidades</string>
    <string name="terms_and_conditions_second_subtitle">Inscripción</string>
    <string name="terms_and_conditions_generalities">Este contrato tiene la finalidad de establecer los Acuerdos y Condiciones del sitio web y de los servicios ofrecidos por Paga-Todo.com, propiedad de la sociedad Global Pay Solutions S.A., una sociedad constituida de conformidad a las leyes de la República de Panamá, o sus afiliadas, o de los diversos sitios web redireccionados a este desde los diversos ccTLD (Country Code Top Level Domain), al que en adelante será referido como “Paga-Todo”.</string>
    <string name="terms_and_conitions_subscription">No pueden registrarse ni usar los servicios proporcionados por Paga-Todo los menores de 18 años de edad, los sordos que no pueden darse a entender de manera indudable, los Usuarios suspendidos o cancelados de Paga-Todo. Y en general solo pueden registrarse todas las personas naturales que tengan capacidad para adquirir derechos y contraer obligaciones por sí mismas, sin necesidad de autorización de otras.</string>
    <string name="forgot_password"><u>¿Has olvidado tu contraseña?</u>.</string>
    <string name="politics"><u>Políticas de Privacidad</u></string>
    <string name="not_setted">Sin establecer...</string>
    <string name="dialog_logging_in">Iniciando sesión...</string>
    <string name="phone_number_edittext_hint"><font size="16">NÚMERO CELULAR</font></string>
    <string name="allow_permission_phone_state_dialog">Debe permitir el acceso al estado del teléfono para asociar el dispositivo a su cuenta.</string>
    <string name="avialable_balance_label">Saldo %1$s</string>
    <string name="avialable_balance_label_generic">Saldo para Vender</string>
    <string name="drawer_home_item">Inicio</string>
    <string name="drawer_profile_item">Perfil de la Cuenta</string>
    <string name="drawer_history_item">Historial de Ventas</string>
    <string name="drawer_balance_item">Solicitar Saldo</string>
    <string name="drawer_notifications_item">Alertas y Notificaciones</string>
    <string name="drawer_info_item">Información General</string>
    <string name="drawer_terms_subitem">Términos y Condiciones</string>
    <string name="drawer_politics_subitem">Políticas de Privacidad y Cookies</string>
    <string name="drawer_deposito_bancario">Validar Depósito Bancario</string>
    <string name="drawer_configuracion">Configuración</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_config">Configuración</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="title_activity_infor">Polítcas de Privacidad</string>
    <string name="title_activity_request_airtime">Solicitar Saldo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sv_title_3">Número Telefónico</string>
    <string name="sv_content_3">Aquí escribes el número de teléfono.</string>
    <string name="sv_title_2">Operador</string>
    <string name="sv_content_2">Selecciona el operador del que se hará la recarga.</string>
    <string name="sv_title_1">Saldo Disponible</string>
    <string name="sv_content_1">Este es el saldo que tienes para vender.</string>
    <string name="sv_title_4">Monto de la Recarga</string>
    <string name="sv_content_4">Debes seleccionar un monto a recargar.</string>
    <string name="sv_title_5">¡Listo!</string>
    <string name="sv_content_5">Ahora haz click en el botón Enviar.</string>
    <string name="sv_close_boton">Cerrar</string>
    <string name="spinner_hint">Seleccione...</string>
    <string name="spinner_amount_validation">Debe seleccionar un monto</string>
    <string name="spinner_bank_validation">Debe seleccionar el banco correspondiente</string>
    <string name="demo_string_2">Navegación Ilimitada x 2 días</string>
    <string name="demo_string_1">Llamadas Internacionales</string>
    <string name="demo_claro_1">Super Pack Llamadas $1</string>
    <string name="demo_claro_2">Super Pack Navegación $0.50</string>
    <string name="demo_claro_3">Super Pack Redes Sociales $0.25</string>
    <string name="demo_tigo_1">PaqueTigo Llamadas $1</string>
    <string name="demo_tigo_2">PaqueTigo Navegación $0.50</string>
    <string name="demo_tigo_3">PaqueTigo Redes Socioales $0.25</string>
    <string name="bank_name_citi">Banco Cuscatlán, S.A.</string>
    <string name="bank_name_agricola">Banco Agricola, S.A.</string>
    <string name="bank_name_bac">Banco de América Central, S.A.</string>
    <string name="bank_name_atm_bac">Cajero ATM Full Service BAC</string>
    <string name="bank_name_atm_agricola">Cajero Total / Banco Agrícola</string>
    <string name="payment_not_paid">NO PAGADA</string>
    <string name="payment_paid">PAGADA</string>
    <string name="status_recarga_display_success">Recarga Exitosa</string>
    <string name="status_recarga_display_fail">Recarga Fallida</string>
    <string name="preference_pin_summary">Establezca un PIN para ingresar a la aplicación</string>
    <string name="preference_pass_summary">Cambiar la contraseña de su cuenta de YoVendoRecarga</string>
    <string name="title_insert_pin">PIN de Seguridad</string>
    <string name="content_insert_pin">Escriba el PIN de seguridad de 4 dígitos para usar la aplicación de YoVendoRecarga.</string>
    <string name="pin_insert_hint"><font size="14">PIN</font></string>
    <string name="pin_confirm_hint"><font size="14">Confirme PIN</font></string>
</resources>