<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppGreen"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.globalpaysolutions.yovendorecarga.ui.activities.Login">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="34dp"
            android:paddingTop="@dimen/VerticalLargeItemSpace">

            <ImageView
                android:layout_width="245dp"
                android:layout_height="100dp"
                android:layout_marginBottom="@dimen/VerticalItemSpace"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:src="@drawable/yvs_logo_green"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <EditText
                    android:id="@+id/etRegMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/VerticalMediumItemSpace"
                    android:hint="@string/hint_email"
                    android:drawableLeft="@drawable/icono_email_verde"
                    android:inputType="textEmailAddress"
                    android:theme="@style/EditTextForGreenBackground"
                    android:textColor="@color/ActivityWhiteBackground"
                    android:textColorHint="@color/SemiTransparentWhite"/>

                <EditText
                    android:id="@+id/etRegPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:drawableLeft="@drawable/icono_lock_verde"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:theme="@style/EditTextForGreenBackground"
                    android:textColor="@color/ActivityWhiteBackground"
                    android:textColorHint="@color/SemiTransparentWhite"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_email_check"
                    android:id="@+id/chkRemember"
                    android:gravity="center"
                    android:textColor="@color/ActivityWhiteBackground"
                    android:button="@drawable/custom_checkbox_white_selector"
                    android:paddingLeft="8dp"
                    android:layout_marginBottom="@dimen/VerticalLargeItemSpace"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_effect_ripple_white"
                android:clickable="true"
                android:paddingLeft="@dimen/ActivityHorizontalExtraCustomMargin"
                android:paddingRight="@dimen/ActivityHorizontalExtraCustomMargin"
                android:text="@string/btn_login_text"/>

            <TextView
                android:id="@+id/tvForgottenPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password"
                android:textColor="@color/SemiTransparentWhite"
                android:textSize="14sp"/>



        </LinearLayout>
    </ScrollView>

</LinearLayout>
